--- a/lang/English.lng
+++ b/lang/English.lng
@@ -1,4 +1,4 @@
-; Re-Metrics (C) 2012-2020 Tatsuhiko Shoji
+; Re-Metrics (C) 2012-2021 Tatsuhiko Shoji
 ; The sources for Re-Metrics are distributed under the MIT open source license
 
 ;In RESOURCE section,
@@ -21,6 +21,7 @@ MENU_PRESET_7_BASIC=Windows 7 Basic
 MENU_PRESET_7=Windows 7
 MENU_PRESET_8=Windows 8/8.1
 MENU_PRESET_10=Windows 10
+MENU_PRESET_11=Windows 11
 MENU_TOOLS=&Tools
 MENU_TOOLS_THREAD=Set window settings in separated thread
 MENU_HELP=&Help
@@ -43,8 +44,8 @@ DLG_OK=OK
 DLG_CANCEL=Cancel
 DLG_WINVER_TITLE=Windows version
 DLG_ABOUT_TITLE=About Re-Metrics
-DLG_ABOUT_VERSION=Re-Metrics Version 1.32
-DLG_ABOUT_CREDIT=By Tatsuhiko Syoji(Tatsu) 2012-2017,2020
+DLG_ABOUT_VERSION=Re-Metrics Version 1.33
+DLG_ABOUT_CREDIT=By Tatsuhiko Syoji(Tatsu) 2012-2017,2020,2021
 DLG_ABOUT_CREDIT2=Translate:Tatsu
 MSG_SETTING_FILE=Window settings file(*.ini)
 MSG_ALL_FILE=All file(*.*)
