--- a/lang/Japanese.lng
+++ b/lang/Japanese.lng
@@ -1,4 +1,4 @@
-; Re-Metrics (C) 2012-2020 Tatsuhiko Shoji
+; Re-Metrics (C) 2012-2021 Tatsuhiko Shoji
 ; The sources for Re-Metrics are distributed under the MIT open source license
 
 ;In RESOURCE section,
@@ -21,6 +21,7 @@ MENU_PRESET_7_BASIC=Windows 7 ベーシック
 MENU_PRESET_7=Windows 7
 MENU_PRESET_8=Windows 8/8.1
 MENU_PRESET_10=Windows 10
+MENU_PRESET_11=Windows 11
 MENU_TOOLS=ツール(&T)
 MENU_TOOLS_THREAD=別スレッドで幅・高さを変更する
 MENU_HELP=ヘルプ(&H)
@@ -43,8 +44,8 @@ DLG_OK=OK
 DLG_CANCEL=キャンセル
 DLG_WINVER_TITLE=Windowsのバージョン
 DLG_ABOUT_TITLE=Re-Metricsについて
-DLG_ABOUT_VERSION=Re-Metrics Version 1.32
-DLG_ABOUT_CREDIT=By Tatsuhiko Syoji(Tatsu) 2012-2017,2020
+DLG_ABOUT_VERSION=Re-Metrics Version 1.33
+DLG_ABOUT_CREDIT=By Tatsuhiko Syoji(Tatsu) 2012-2017,2020,2021
 DLG_ABOUT_CREDIT2=Translate:Tatsu
 MSG_SETTING_FILE=設定ファイル(*.ini)
 MSG_ALL_FILE=すべてのファイル(*.*)
