--- a/lang/English.lng
+++ b/lang/English.lng
@@ -35,8 +35,8 @@ DLG_SCROLL_BAR_WIDTH=Scroll bar width
 DLG_SCROLL_BAR_HEIGHT=Scroll bar height
 DLG_PALETTE_WIDTH=Palette width
 DLG_PALETTE_HEIGHT=Palette height
-DLG_MENU_WIDTH=Menu width
-DLG_MENU_HEIGHT=Menu height
+DLG_MENU_WIDTH=Menu bar width
+DLG_MENU_HEIGHT=Menu bar height
 DLG_WINDOW_PADDING=Padded border width
 DLG_ICON_HORIZONTAL_MARGIN=Icon horizontal spacing
 DLG_ICON_VERTICAL_MARGIN=Icon vertical spacing
@@ -64,4 +64,4 @@ MSG_NO_MENU_WIDTH=Please input menu bar width.
 MSG_NO_MENU_HEIGHT=Please input menu bar height.
 MSG_NO_WINDOW_PADDING=Please input window padding.
 MSG_NO_ICON_HORIZONTAL_MARGIN=Please input horizontal icon margin.
-MSG_NO_ICON_VERTICAL_MARGIN=No vertical icon margin.
+MSG_NO_ICON_VERTICAL_MARGIN=Please input vertical icon margin.
