Language file Update
Change version number.
Adjust menu access key on Chinese translation.

--- a/lang/Chinese (Simplified)_China.lng
+++ b/lang/Chinese (Simplified)_China.lng
@@ -8,9 +8,9 @@ FONT_FACE=Segoe UI
 FONT_CHARSET=0
 TITLE=Re-Metrics
 MENU_FILE=文件(&F)
-MENU_FILE_LOAD=(&O)加载窗口设置...
-MENU_FILE_SAVE=(&A)保存窗口设置...
-MENU_FILE_SET_QUIT=(&S)设置各窗口然后退出
+MENU_FILE_LOAD=加载窗口设置(&O)...
+MENU_FILE_SAVE=保存窗口设置(&A)...
+MENU_FILE_SET_QUIT=设置各窗口然后退出(&S)
 MENU_FILE_QUIT=退出(&X)
 MENU_PRESET=预设(&P)
 MENU_PRESET_2000=Windows 2000
@@ -44,7 +44,7 @@ DLG_OK=确定
 DLG_CANCEL=取消
 DLG_WINVER_TITLE=Windows版本
 DLG_ABOUT_TITLE=关于Re-Metrics
-DLG_ABOUT_VERSION=Re-Metrics （翻译时）版本：1.34
+DLG_ABOUT_VERSION=Re-Metrics （翻译时）版本：1.35
 DLG_ABOUT_CREDIT=作者：Tatsuhiko Syoji(Tatsu) 2012-2017,2020,2021,2022
 DLG_ABOUT_CREDIT2=中文(简体)翻译:GodGun968(神枪968)
 MSG_SETTING_FILE=窗口设置文件(*.ini)
