--- a/lang/English.lng
+++ b/lang/English.lng
@@ -44,9 +44,9 @@ DLG_OK=OK
 DLG_CANCEL=Cancel
 DLG_WINVER_TITLE=Windows version
 DLG_ABOUT_TITLE=About Re-Metrics
-DLG_ABOUT_VERSION=Re-Metrics Version 1.34
+DLG_ABOUT_VERSION=Re-Metrics Version 1.35
 DLG_ABOUT_CREDIT=By Tatsuhiko Syoji(Tatsu) 2012-2017,2020,2021,2022
-DLG_ABOUT_CREDIT2=Translate:Tatsu
+DLG_ABOUT_CREDIT2=Translate:Tatsu,GodGun968
 MSG_SETTING_FILE=Window settings file(*.ini)
 MSG_ALL_FILE=All file(*.*)
 MSG_LOAD_FAIL=Window settings file load failed.
