--- a/lang/Korean.lng
+++ b/lang/Korean.lng
@@ -1,4 +1,4 @@
-; Re-Metrics (C) 2012-2022 Tatsuhiko Shoji
+; Re-Metrics (C) 2012-2023 Tatsuhiko Shoji
 ; The sources for Re-Metrics are distributed under the MIT open source license
 
 ;In RESOURCE section,
@@ -44,8 +44,8 @@ DLG_OK=OK
 DLG_CANCEL=취소
 DLG_WINVER_TITLE=Windows 버전
 DLG_ABOUT_TITLE=Re-Metrics 정보
-DLG_ABOUT_VERSION=Re-Metrics 버전 1.35
-DLG_ABOUT_CREDIT=By Tatsuhiko Syoji(Tatsu) 2012-2017,2020,2021,2022
+DLG_ABOUT_VERSION=Re-Metrics 버전 1.36
+DLG_ABOUT_CREDIT=By Tatsuhiko Syoji(Tatsu) 2012-2017,2020-2023
 DLG_ABOUT_CREDIT2=Translate: Josh Kim (joshkkim@gmail.com)
 MSG_SETTING_FILE=창 설정 파일 (*.ini)
 MSG_ALL_FILE=전체 파일 (*.*)
